--- a/activity-service/src/main/resources/application.yml
+++ b/activity-service/src/main/resources/application.yml
@@ -6,16 +6,16 @@ spring:
   application:
     name: Activity-Service
   datasource:
-    url: jdbc:postgresql://localhost:6381/postgres
-    username: postgres
-    password: rootactivity
+    url: ${BLOSSOM_ACTIVITY_DB}
+    username: ${BLOSSOM_ACTIVITY_DB_USERNAME}
+    password: ${BLOSSOM_ACTIVITY_DB_PASSWORD}
   flyway:
     baseline-on-migrate: true
   redis:
-    host: localhost
-    port: 6377
+    host: ${BLOSSOM_ACTIVITY_CACHE_HOST}
+    port: ${BLOSSOM_ACTIVITY_CACHE_PORT}
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: ${BLOSSOM_KAFKA}
     consumer:
       group-id: activityListenerId
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
@@ -29,10 +29,10 @@ spring:
               mapping: event:org.blossom.model.ResourceEvent
 grpc:
   server:
-    port: 8201
+    port: ${BLOSSOM_ACTIVITY_GRPC_PORT}
     awaitTerminationInSeconds: 10
 server:
-  port: 8197
+  port: ${BLOSSOM_ACTIVITY_PORT}
 eureka:
   client:
     service-url:
