--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -3,7 +3,7 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka/
 server:
-  port: 8181
+  port: ${BLOSSOM_GATEWAY_PORT}
 spring:
   application:
     name: Api-Gateway
