--- a/post-service/src/main/resources/application.yml
+++ b/post-service/src/main/resources/application.yml
@@ -3,9 +3,9 @@ spring:
     name: Post-Service
   data:
     mongodb:
-      host: ${BLOSSOM_NOTIFICATION_DB_HOST}
-      port: ${BLOSSOM_NOTIFICATION_DB_PORT}
-      database: ${BLOSSOM_NOTIFICATION_DB_NAME}
+      host: ${BLOSSOM_POST_DB_HOST}
+      port: ${BLOSSOM_POST_DB_PORT}
+      database: ${BLOSSOM_POST_DB_NAME}
   kafka:
     bootstrap-servers: ${BLOSSOM_KAFKA}
     topics: post-resource-event-feed, post-resource-event-activity
