--- a/k8s/services/auth-service/auth-deployment.yml
+++ b/k8s/services/auth-service/auth-deployment.yml
@@ -74,7 +74,7 @@ spec:
                   name: blossom-config
                   key: BLOSSOM_KAFKA
             - name: SPRING_PROFILES_ACTIVE
-              value: k8s
+              value: docker
           image: bernardofmf/blossom-auth-service:latest
           name: auth-service
           ports:
