--- a/k8s/infrastructure/rabbitmq-message/message-broker-deployment.yml
+++ b/k8s/infrastructure/rabbitmq-message/message-broker-deployment.yml
@@ -38,6 +38,7 @@ spec:
                   key: ROOT_USER_RELAY
           image: bernardofmf/blossom-custom-rabbitmq-stomp:latest
           name: message-broker
+          imagePullPolicy: Always
           ports:
             - containerPort: 15672
               hostPort: 9093
