--- a/k8s/services/activity-service/activity-deployment.yml
+++ b/k8s/services/activity-service/activity-deployment.yml
@@ -55,9 +55,10 @@ spec:
                   name: blossom-config
                   key: BLOSSOM_KAFKA
             - name: SPRING_PROFILES_ACTIVE
-              value: docker
+              value: kubernetes
           image: bernardofmf/blossom-activity-service:latest
           name: activity-service
+          imagePullPolicy: Always
           ports:
             - containerPort: 8197
               hostPort: 8197
