--- a/k8s/services/message-service/message-deployment.yml
+++ b/k8s/services/message-service/message-deployment.yml
@@ -69,9 +69,10 @@ spec:
             - name: BLOSSOM_MESSAGE_PORT
               value: "8207"
             - name: SPRING_PROFILES_ACTIVE
-              value: docker
+              value: kubernetes
           image: bernardofmf/blossom-message-service:latest
           name: message-service
+          imagePullPolicy: Always
           ports:
             - containerPort: 8207
               hostPort: 8207
