--- a/k8s/services/post-service/post-deployment.yml
+++ b/k8s/services/post-service/post-deployment.yml
@@ -59,9 +59,10 @@ spec:
             - name: BLOSSOM_POST_PORT
               value: "8213"
             - name: SPRING_PROFILES_ACTIVE
-              value: docker
+              value: kubernetes
           image: bernardofmf/blossom-post-service:latest
           name: post-service
+          imagePullPolicy: Always
           ports:
             - containerPort: 8213
               hostPort: 8213
