--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -202,27 +202,6 @@ services:
       - api-gateway
       - image-service
 
-  post-service:
-    image: bernardofmf/blossom-post-service:latest
-    container_name: post-service
-    ports:
-      - "8213:8213"
-    environment:
-      - SPRING_PROFILES_ACTIVE=docker
-      - BLOSSOM_POST_DB_HOST=post-service-db
-      - BLOSSOM_POST_DB_PORT=27017
-      - BLOSSOM_POST_DB_NAME=post-db
-      - BLOSSOM_KAFKA=broker:29092
-      - BLOSSOM_POST_CACHE_HOST=post-service-cache
-      - BLOSSOM_POST_CACHE_PORT=6379
-      - BLOSSOM_POST_PORT=8213
-    depends_on:
-      - post-service-db
-      - post-service-cache
-      - discovery-server
-      - api-gateway
-      - image-service
-
   activity-service:
     image: bernardofmf/blossom-activity-service:latest
     container_name: activity-service
@@ -245,7 +224,28 @@ services:
       - discovery-server
       - api-gateway
       - auth-service
-      - post-service
+
+  post-service:
+    image: bernardofmf/blossom-post-service:latest
+    container_name: post-service
+    ports:
+      - "8213:8213"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+      - BLOSSOM_POST_DB_HOST=post-service-db
+      - BLOSSOM_POST_DB_PORT=27017
+      - BLOSSOM_POST_DB_NAME=post-db
+      - BLOSSOM_KAFKA=broker:29092
+      - BLOSSOM_POST_CACHE_HOST=post-service-cache
+      - BLOSSOM_POST_CACHE_PORT=6379
+      - BLOSSOM_POST_PORT=8213
+    depends_on:
+      - post-service-db
+      - post-service-cache
+      - discovery-server
+      - api-gateway
+      - image-service
+      - activity-service
 
   social-graph-service:
     image: bernardofmf/blossom-social-graph-service:latest
