IMPROVE: Created test utility module to centralize common test setup.

--- a/common-utilities/pom.xml
+++ b/common-utilities/pom.xml
@@ -16,6 +16,7 @@
         <module>auth-utilities</module>
         <module>kafka-utilities</module>
         <module>grpc-utilities</module>
+        <module>test-utilities</module>
     </modules>
 
     <properties>
