--- a/feed-service/pom.xml
+++ b/feed-service/pom.xml
@@ -68,8 +68,10 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <groupId>org.blossom.common</groupId>
+            <artifactId>test-utilities</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
