--- a/common-utilities/test-utilities/pom.xml
+++ b/common-utilities/test-utilities/pom.xml
@@ -58,5 +58,10 @@
             <artifactId>guava</artifactId>
             <version>31.1-android</version>
         </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
