--- a/common-utilities/test-utilities/pom.xml
+++ b/common-utilities/test-utilities/pom.xml
@@ -63,5 +63,9 @@
             <artifactId>postgresql</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>mongodb</artifactId>
+        </dependency>
     </dependencies>
 </project>
