--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -4,6 +4,8 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
 server:
   port: ${BLOSSOM_GATEWAY_PORT}
+cors:
+  allowed-origins: ${BLOSSOM_CORS_ORIGINS}
 spring:
   application:
     name: Api-Gateway
