--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -58,6 +58,8 @@ spring:
           uri: lb://message-service
           predicates:
             - Path=/api/{version}/message/**, /api/{version}/chat/**
+          filters:
+            - AuthenticationFilter
 
         - id: notification-service-ws
           uri: lb:ws://notification-service
@@ -69,7 +71,9 @@ spring:
         - id: notification-service
           uri: lb://notification-service
           predicates:
-            - Path=/api/{version}/notification/message/**, /api/{version}/notification/follow/**
+            - Path=/api/{version}/notification/message/**, /api/{version}/notification/follow/**, /api/{version}/notification/session/**
+          filters:
+            - AuthenticationFilter
 
         - id: discovery-server
           uri: http://localhost:8761
