--- a/message-service/src/main/resources/application.yml
+++ b/message-service/src/main/resources/application.yml
@@ -23,6 +23,9 @@ spring:
               packages: "org.blossom.model"
             type:
               mapping: event:org.blossom.model.ResourceEvent
+  redis:
+    host: localhost
+    port: 6388
 broker:
   host: ${BLOSSOM_MESSAGE_BROKER_HOST}
   port: ${BLOSSOM_MESSAGE_BROKER_PORT}
