--- a/post-service/pom.xml
+++ b/post-service/pom.xml
@@ -104,6 +104,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.blossom.common</groupId>
+            <artifactId>test-utilities</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
