--- a/message-service/src/main/resources/application.yml
+++ b/message-service/src/main/resources/application.yml
@@ -24,8 +24,8 @@ spring:
             type:
               mapping: event:org.blossom.model.ResourceEvent
   redis:
-    host: localhost
-    port: 6388
+    host: ${BLOSSOM_MESSAGE_CACHE_HOST}
+    port: ${BLOSSOM_MESSAGE_CACHE_PORT}
 broker:
   host: ${BLOSSOM_MESSAGE_BROKER_HOST}
   port: ${BLOSSOM_MESSAGE_BROKER_PORT}
@@ -33,6 +33,10 @@ broker:
   password: ${BLOSSOM_MESSAGE_BROKER_PASSWORD}
 server:
   port: ${BLOSSOM_MESSAGE_PORT}
+websocket:
+  origins: ${BLOSSOM_NOTIFICATION_ALLOWED_ORIGINS}
+  test:
+    enabled: ${BLOSSOM_NOTIFICATION_TEST_MODE_ENABLED}
 eureka:
   client:
     service-url:
