FEATURE: Added env variable docs.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -147,7 +147,7 @@ services:
     environment:
       - SPRING_PROFILES_ACTIVE=docker
       - BLOSSOM_GATEWAY_PORT=8181
-      - BLOSSOM_CORS_ORIGINS=${BLOSSOM_CORS}
+      - BLOSSOM_CORS_ORIGINS=${CORS}
     depends_on:
       - discovery-server
 
@@ -161,7 +161,7 @@ services:
       - SPRING_PROFILES_ACTIVE=docker
       - BLOSSOM_IMAGE_PORT=8185
       - BLOSSOM_IMAGE_GRPC_PORT=8188
-      - BLOSSOM_S3_MOCK=true
+      - BLOSSOM_S3_MOCK=${S3_MOCK}
       - BLOSSOM_S3_REGION=${S3_REGION}
       - BLOSSOM_S3_BUCKET=${S3_BUCKET}
       - BLOSSOM_S3_PATH=/
@@ -182,7 +182,8 @@ services:
       - BLOSSOM_EMAIL_USERNAME=${EMAIL_USERNAME}
       - BLOSSOM_EMAIL_PASSWORD=${EMAIL_PASSWORD}
       - BLOSSOM_KAFKA=broker:29092
-      - BLOSSOM_CALLBACK=${BLOSSOM_CALLBACK}
+      - BLOSSOM_VALIDATE_CALLBACK=${VALIDATE_CALLBACK}
+      - BLOSSOM_RECOVER_CALLBACK=${RECOVER_CALLBACK}
       - BLOSSOM_JWT_SECRET=${JWT_SECRET}
       - BLOSSOM_JWT_DURATION=${JWT_DURATION}
       - BLOSSOM_JWT_REFRESH_DURATION=${JWT_REFRESH_DURATION}
